Fixing post-validation-refactor bugs
